Modified base.html, corrected html errors

--- a/html/templates/BigData.html
+++ b/html/templates/BigData.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
 {% extends "base.html" %}
-{% block title %}Programmer5 - BL Archives{% endblock %}
+{% block title %}Big Data{% endblock %}
 
 {% block content %}
-
+    <h1>Big Data</h1>
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item">
             <a class="nav-link active" id="pills-pycharm-tab" data-toggle="pill" href="#pills-pycharm" role="tab"
@@ -32,12 +30,12 @@
                             <p> Big data is a field that treats ways to analyze, systematically extract
                                 information from,
                                 or otherwise deal with <a href="https://en.wikipedia.org/wiki/Data_set"
-                                                          target="_blank" style="color: rgb(0,0,230)"><u>data
-                                    sets</u></a> that are too large or complex to
+                                                          target="_blank">data
+                                    sets</a> that are too large or complex to
                                 be dealt with by traditional <a href="https://en.wikipedia.org/wiki/Data_processing"
-                                                                target="_blank" style="color: rgb(0,0,230)"><u>data-processing</u></a>
+                                                                target="_blank">data-processing</a>
                                 <a href="https://en.wikipedia.org/wiki/Application_software"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>application software</u></a>. <br></p>
+                                   target="_blank">application software</a>. <br></p>
 
                             <p>Advantages of BigData: <br><br></p>
 
@@ -81,28 +79,28 @@
                                 be analyzed computationally to reveal patterns, trends, and associations,
                                 especially relating to human behavior and interactions. Data with many fields (columns)
                                 offer greater <a href="https://en.wikipedia.org/wiki/Power_of_a_test"
-                                                 target="_blank" style="color: rgb(0,0,230)"><u>statistical
-                                    power</u></a>, while data with higher complexity (more attributes or columns)
+                                                 target="_blank">statistical
+                                    power</a>, while data with higher complexity (more attributes or columns)
                                 may lead to a higher <a href="https://en.wikipedia.org/wiki/False_discovery_rate"
-                                                        target="_blank" style="color: rgb(0,0,230)"><u>false discovery
-                                    rate</u></a>.Big data analysis challenges include
+                                                        target="_blank">false discovery
+                                    rate</a>.Big data analysis challenges include
                                 <a href="https://en.wikipedia.org/wiki/Automatic_identification_and_data_capture"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>capturing data</u></a>,
+                                   target="_blank">capturing data</a>,
                                 <a href="https://en.wikipedia.org/wiki/Computer_data_storage"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>data storage</u></a>,
+                                   target="_blank">data storage</a>,
                                 <a href="https://en.wikipedia.org/wiki/Data_analysis"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>data analysis</u></a>, search,
+                                   target="_blank">data analysis</a>, search,
                                 <a href="https://en.wikipedia.org/wiki/Data_sharing"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>sharing</u></a>,
+                                   target="_blank">sharing</a>,
                                 <a href="https://en.wikipedia.org/wiki/Data_communication"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>transfer</u></a>,
+                                   target="_blank">transfer</a>,
                                 <a href="https://en.wikipedia.org/wiki/Data_visualization"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>visualization</u></a>,
+                                   target="_blank">visualization</a>,
                                 <a href="https://en.wikipedia.org/wiki/Query_language"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>querying</u></a>,
+                                   target="_blank">querying</a>,
                                 updating,
                                 <a href="https://en.wikipedia.org/wiki/Information_privacy"
-                                   target="_blank" style="color: rgb(0,0,230)"><u>information privacy</u></a>, and data
+                                   target="_blank">information privacy</a>, and data
                                 source. Big data was originally associated
                                 with three key concepts: volume, variety, and velocity. The analysis of big data
                                 presents challenges in sampling, and thus previously allowing for only observations
