--- a/html/templates/D3.html
+++ b/html/templates/D3.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
 {% extends "base.html" %}
-{% block title %}Programmer5 - BL Archives{% endblock %}
+{% block title %}D3{% endblock %}
 
 {% block content %}
+    <h1>D3</h1>
 
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item">
@@ -121,10 +120,7 @@
 
                                 <h3>Download D3.js Library</h3>
                                 <p>D3.js is an open-source library and the source code of the library is freely
-                                    available
-                                    on the web at <a href="https://d3js.org/"
-                                                     target="_blank"
-                                                     style="color: rgb(0,0,230)"><u>https://d3js.org/</u></a> website.
+                                    available on the web at <a href="https://d3js.org/" target="_blank">https://d3js.org/</a> website.
                                     Visit the D3.js website and download the latest version
                                     of D3.js (d3.zip). As of now, the latest version is 4.6.0.
                                     After the download is complete, unzip the file and look for d3.min.js.
@@ -165,7 +161,7 @@
 
                                 <P>Include the D3.js library using
                                     the CDN URL <a href="https://d3js.org/d3.v4.min.js"
-                                                   target="_blank" style="color: rgb(0,0,230)"><u>https://d3js.org/d3.v4.min.js</u></a>
+                                                   target="_blank">https://d3js.org/d3.v4.min.js</a>
                                     into our page as shown below.</P>
 
                                 <p><strong>Example </strong>− Let us consider the following example.</p>
