--- a/html/templates/Dc.html
+++ b/html/templates/Dc.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
 {% extends "base.html" %}
-{% block title %}Programmer5 - BL Archives{% endblock %}
+{% block title %}DC{% endblock %}
 
 {% block content %}
+    <h1>DC</h1>
 
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item">
@@ -31,11 +30,11 @@
 
                             <p> Pdc.js is a javascript charting library with native <a
                                     href="http://crossfilter.github.io/crossfilter/"
-                                    target="_blank" style="color: rgb(0,0,230)"><u>crossfilter</u></a> support, allowing
+                                    target="_blank">crossfilter</a> support, allowing
                                 highly efficient exploration o
                                 n large multi-dimensional datasets (inspired by crossfilter's demo). It leverages <a
                                         href="https://d3js.org/"
-                                        target="_blank" style="color: rgb(0,0,230)"><u>d3</u></a>
+                                        target="_blank">d3</a>
                                 to render charts in CSS-friendly SVG format. Charts rendered using dc.js are data driven
                                 and
                                 reactive and therefore provide instant feedback to user interaction. <br></p>
@@ -94,7 +93,7 @@
                                 <h3>Download DC.js Library</h3>
                                 <p>DC is an open-source library; use the link
                                     <a href="https://github.com/dc-js/dc.js/releases"
-                                       target="_blank" style="color: rgb(0,0,230)"><u>https://github.com/dc-js/dc.js/releases</u></a>
+                                       target="_blank">https://github.com/dc-js/dc.js/releases</a>
                                     to download the file.</p>
 
                                 <p>Download the latest version of the DC file.
