--- a/html/templates/Folium.html
+++ b/html/templates/Folium.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 {% extends "base.html" %}
-{% block title %}Programmer5 - BL Archives{% endblock%}
+{% block title %}Folium{% endblock%}
 
 {% block content %}
 
@@ -96,7 +96,7 @@
 
                                 <h3>Documentation</h3>
                                 <p><a href="https://python-visualization.github.io/folium/"
-                                        target="_blank" style="color: rgb(0,0,230)"><u>https://python-visualization.github.io/folium/</u></a></p>
+                                        target="_blank">https://python-visualization.github.io/folium/</a></p>
 
 
 
