--- a/html/templates/UsefulResources.html
+++ b/html/templates/UsefulResources.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
+
 {% extends "base.html" %}
+{% block title %}Useful Resources{% endblock%}
 
 {% block content %}
 
-<head>
-    <title>Data to Intelligence - Useful Resources</title>
-</head>
 <body>
 <h1>Useful Resources</h1>
 
