--- a/html/templates/home.html
+++ b/html/templates/home.html
@@ -18,13 +18,13 @@
 
 <h2>Exploratory Description Output</h2>
      
-     <p>The  output will  include basic description of the type of data, categorical or quantitative, and if quantitative, whether the data are nominal, ordinal, intervalor ratio. These outputs will be stored for 24 hours and presented on the right panel of the Website and/or as pdf. It will also help to flag out missing data or outliers.</p>
+     <p>The  output will  include basic description of the type of data, categorical or quantitative, and if quantitative, whether the data is nominal, ordinal, or interval ratio. These outputs will be stored for 24 hours and presented on the right panel of the Website and/or as pdf. It will also help to flag out missing data or outliers.</p>
 
 <h2>Data Analysis</h2>
      <p>Based on the data in the CSV file, the data analysis output will try at least 5 statistical analysis for all possible combinations of columns in the CSV file. Some of the analytical methods may not be relevant to the type of data and will therefore continue to the next loop of the test.</p> 
 
 <h2>Visualization</h2>
-     <p>The main purpose of the website is to throw out as many types of visualization so as to get a big picture of the patterns in the data they uploaded. This big picture will give researchers insights into the relationships between all their data and thus allow them to drill down and choose certain  aspects for deeper analysis.</p>  
+     <p>The main purpose of the website is to throw out as many types of visualizations to get as big of a picture of the patterns in the data that is uploaded. This big picture will give researchers insights into the relationships between all their data and thus allow them to drill down and choose certain aspects for deeper analysis.</p>
 
 <p>For this project we will be using the following:</p>
 
