--- a/html/templates/production.html
+++ b/html/templates/production.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+{% block title %}Production{% endblock%}
+
+{% block content %}
+
 <h1>Production</h1>
 
-<p>This section will share some good practices in deploying the flask application on Ubuntyu 20.04<p/>
+<p>This section will share some good practices in deploying the flask application on Ubuntu 20.04<p/>
+
+{% endblock %}
