--- a/html/templates/statistics.html
+++ b/html/templates/statistics.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+{% block title %}Statistics{% endblock %}
 
-<h1>Statistics</h1>
-<p>This section serves to share you best practices in understanding statistics</p>
+{% block content %}
+    <h1>Statistics</h1>
+    <p>This section serves to share you best practices in understanding statistics</p>
 
+{% endblock %}
