--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -13,7 +13,7 @@ p {
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
-    color: #00000;
+    color: #000000;
 }
 
 a,
@@ -73,9 +73,14 @@ a:focus {
     background: #6d7fcc;
 }
 
+#sidebar h5 {
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+    /*border-bottom: 1px solid #47748b;*/
 }
 
 #sidebar ul p {
