--- a/html/templates/AccessingData.html
+++ b/html/templates/AccessingData.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
 {% extends "base.html" %}
+{% block title %}Accessing Data{% endblock%}
 
 {% block content %}
-<html>
-<head>
-    <h1>Data Preview</h1>
-</head>
-<body>
 
-</body>
-</html>
+    <h1>Data Preview</h1>
+
 {% endblock %}
