--- a/html/templates/Clusters.html
+++ b/html/templates/Clusters.html
@@ -1,95 +1,103 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
 {% extends "base.html" %}
-{% block title %}Programmer5 - BL Archives{% endblock%}
+{% block title %}Clusters{% endblock %}
 
 {% block content %}
+    <h1>Clusters</h1>
+    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="pills-pycharm-tab" data-toggle="pill" href="#pills-pycharm" role="tab"
+               aria-controls="pills-pycharm" aria-selected="false">Clusters</a>
+        </li>
+    </ul>
+    <div class="tab-pane fade show active" id="pills-pycharm" role="tabpanel" aria-labelledby="pills-pycharm-tab">
+        <hr/>
 
-<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-    <li class="nav-item">
-        <a class="nav-link active" id="pills-pycharm-tab" data-toggle="pill" href="#pills-pycharm" role="tab"
-           aria-controls="pills-pycharm" aria-selected="false">Clusters</a>
-    </li>
-</ul>
-<div class="tab-pane fade show active" id="pills-pycharm" role="tabpanel" aria-labelledby="pills-pycharm-tab">
-    <hr/>
-
-    <div class="accordion" id="accordionGuide">
-        <div class="card">
-            <div class="card-header" id="headingOne">
-                <h5 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                            aria-expanded="true" aria-controls="collapseOne">
-                        Description
-                    </button>
-                </h5>
-            </div>
-
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionGuide">
-                <div class="card-body">
-                    <div class="description">
-
-                        <p> In computer <a href="https://en.wikipedia.org/wiki/File_system"
-                                        target="_blank" style="color: rgb(0,0,230)"><u>file systems</u></a>,
-                            a <strong>cluster</strong> (sometimes also called <strong>allocation unit</strong> or <strong>block</strong>)
-                            is a unit of disk space allocation for files and directories.
-                            To reduce the overhead of managing on-disk data structures,
-                            the filesystem does not allocate individual <a href="https://en.wikipedia.org/wiki/Disk_sector"
-                                        target="_blank" style="color: rgb(0,0,230)"><u>disk sectors</u></a> by default,
-                            but contiguous groups of sectors, called clusters. <br></p>
-
-                        <p>Advantages of Clusters: <br><br></p>
-
-                        <ul>
-                            <li> Requires fewer resources</li>
-                            <li> More feasible</li>
-                        </ul>
-
-                        <p><br><br>Disadvantages of Clusters: <br><br></p>
-
-                        <ul>
-                            <li> Complexity and inability to recover from database corruption.</li>
-                            <li> In a clustered environment, the cluster uses the same IP address for Directory Server and Directory Proxy Server,
-                                regardless of which cluster node is actually running the service.</li>
-                        </ul>
-
-                    </div>
-                </div>
-            </div>
-
-
-
+        <div class="accordion" id="accordionGuide">
             <div class="card">
-                <div class="card-header" id="headingThree">
+                <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Summary
+                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                                aria-expanded="true" aria-controls="collapseOne">
+                            Description
                         </button>
                     </h5>
                 </div>
-                <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-                     data-parent="#accordionExample">
-                    <div class="card-body">
-                        <p>A cluster is the smallest logical amount of disk space that can be allocated to hold a file.
-                            Storing small files on a filesystem with large clusters will therefore waste disk space;
-                            such wasted disk space is called <a href="https://en.wikipedia.org/wiki/Fragmentation_(computing)#Internal_fragmentation"
-                                        target="_blank" style="color: rgb(0,0,230)"><u>slack space</u></a>. For cluster sizes which are small versus the
-                            average file size, the wasted space per file will be statistically about half of the cluster size;
-                            for large cluster sizes, the wasted space will become greater. However, a larger cluster size
-                            reduces bookkeeping overhead and fragmentation, which may improve reading and writing speed overall.
-                            Typical cluster sizes range from 1 sector (512 B) to 128 sectors (64 KiB).</p>
 
-                        <p>A cluster need not be physically contiguous on the disk;
-                            it may span more than one track or, if sector interleaving is used,
-                            may even be discontiguous within a track. This should not be confused with fragmentation,
-                            as the sectors are still logically contiguous.</p>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionGuide">
+                    <div class="card-body">
+                        <div class="description">
+
+                            <p> In computer <a href="https://en.wikipedia.org/wiki/File_system"
+                                               target="_blank">file systems</a>,
+                                a <strong>cluster</strong> (sometimes also called <strong>allocation unit</strong> or
+                                <strong>block</strong>)
+                                is a unit of disk space allocation for files and directories.
+                                To reduce the overhead of managing on-disk data structures,
+                                the filesystem does not allocate individual <a
+                                        href="https://en.wikipedia.org/wiki/Disk_sector"
+                                        target="_blank">disk sectors</a> by default,
+                                but contiguous groups of sectors, called clusters. <br></p>
+
+                            <p>Advantages of Clusters: <br><br></p>
+
+                            <ul>
+                                <li> Requires fewer resources</li>
+                                <li> More feasible</li>
+                            </ul>
+
+                            <p><br><br>Disadvantages of Clusters: <br><br></p>
+
+                            <ul>
+                                <li> Complexity and inability to recover from database corruption.</li>
+                                <li> In a clustered environment, the cluster uses the same IP address for Directory
+                                    Server and Directory Proxy Server,
+                                    regardless of which cluster node is actually running the service.
+                                </li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Summary
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
+                         data-parent="#accordionExample">
+                        <div class="card-body">
+                            <p>A cluster is the smallest logical amount of disk space that can be allocated to hold a
+                                file.
+                                Storing small files on a filesystem with large clusters will therefore waste disk space;
+                                such wasted disk space is called <a
+                                        href="https://en.wikipedia.org/wiki/Fragmentation_(computing)#Internal_fragmentation"
+                                        target="_blank">slack space</a>. For cluster
+                                sizes which are small versus the
+                                average file size, the wasted space per file will be statistically about half of the
+                                cluster size;
+                                for large cluster sizes, the wasted space will become greater. However, a larger cluster
+                                size
+                                reduces bookkeeping overhead and fragmentation, which may improve reading and writing
+                                speed overall.
+                                Typical cluster sizes range from 1 sector (512 B) to 128 sectors (64 KiB).</p>
+
+                            <p>A cluster need not be physically contiguous on the disk;
+                                it may span more than one track or, if sector interleaving is used,
+                                may even be discontiguous within a track. This should not be confused with
+                                fragmentation,
+                                as the sectors are still logically contiguous.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
 
