--- a/html/templates/DevEnv.html
+++ b/html/templates/DevEnv.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
 {% extends "base.html" %}
-{% block title %}Programmer1 - DB Archives{% endblock %}
+{% block title %}Dev Environment{% endblock %}
 
 {% block content %}
-
+    <h1>Development Environment</h1>
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item">
             <a class="nav-link active" id="pills-pycharm-tab" data-toggle="pill" href="#pills-pycharm" role="tab"
