--- a/html/templates/ErrorFileUpload.html
+++ b/html/templates/ErrorFileUpload.html
@@ -1,15 +1,13 @@
 {% extends "base.html" %}
+{% block title %}Upload Error{% endblock%}
 
 {% block content %}
 
-<head>
+
 <body>
 
 <h1>ERROR</h1>
 <h2>There was an error uploading the file</h2>
 
 </body>
-</head>
-<!DOCTYPE html>
-<meta charset="utf-8">
 {% endblock %}
