--- a/html/templates/SuccessfulUpload.html
+++ b/html/templates/SuccessfulUpload.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 {% extends "base.html" %}
+{% block title %}Upload Successful{% endblock%}
 
 {% block content %}
 
