--- a/html/templates/map.html
+++ b/html/templates/map.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Sample Project{% endblock%}
+{% block title %}GeoMap of Canada{% endblock%}
 
 {% block content %}
  
