More html edits

--- a/html/templates/Folium.html
+++ b/html/templates/Folium.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
 {% extends "base.html" %}
 {% block title %}Folium{% endblock%}
 
 {% block content %}
+
+    <h1>Folium</h1>
+
+    <hr>
 
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 
