--- a/html/templates/D3.html
+++ b/html/templates/D3.html
@@ -4,6 +4,8 @@
 {% block content %}
     <h1>D3</h1>
 
+    <hr>
+
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item">
             <a class="nav-link active" id="pills-pycharm-tab" data-toggle="pill" href="#pills-pycharm" role="tab"
@@ -159,10 +161,10 @@
                                     hosted and are delivered to a user based on their geographic location.
                                     If we use the CDN, we do not need to download the source code.</p><br>
 
-                                <P>Include the D3.js library using
+                                <p>Include the D3.js library using
                                     the CDN URL <a href="https://d3js.org/d3.v4.min.js"
                                                    target="_blank">https://d3js.org/d3.v4.min.js</a>
-                                    into our page as shown below.</P>
+                                    into our page as shown below.</p>
 
                                 <p><strong>Example </strong>− Let us consider the following example.</p>
 
