--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -55,7 +55,7 @@
                     </li>
 
                     <li class="active">
-                        <a href="#">Moving Data</a>
+                        <a href="{{ url_for('moving_data') }}">Moving Data</a>
                     </li>
 
                     <li class="active">
